--- a/psp_discrete_networked.ipynb
+++ b/psp_discrete_networked.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "name": "psp-discrete-networked.ipynb",
-      "authorship_tag": "ABX9TyPzuNw0rha0SoTohMzBXKzP",
+      "authorship_tag": "ABX9TyOZ6lDhsAWldfxglxZf96XD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 32,
       "metadata": {
         "id": "8RHKO0tAnTU3"
       },
@@ -101,7 +101,7 @@
       "metadata": {
         "id": "tdI1GuMSuh_J"
       },
-      "execution_count": 15,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -224,6 +224,30 @@
         "        this returns the maximum quantity available to you after fully\n",
         "        serving all opponents whose bids exceed p_i.\n",
         "\n",
+        "            Q̄_i(p_i; s_{-i}) = max { Q_max - ∑_{j: p_j > p_i} q_j, 0 }\n",
+        "\n",
+        "        where each opponent j requests quantity q_j at price p_j.\n",
+        "        \"\"\"\n",
+        "        # Start with full capacity\n",
+        "        remaining = self.seller.Q_max\n",
+        "        # Subtract the quantities of all opponents\n",
+        "        # whose bid price p_j strictly exceeds p_i\n",
+        "        for (q_j, p_j) in s_hat_minus.values():\n",
+        "            if p_j > p_i:\n",
+        "                remaining -= q_j\n",
+        "        # Cannot go below zero\n",
+        "        return max(remaining, 0.0)\n",
+        "\n",
+        "    def Q_i_bar(self,\n",
+        "            p_i: float,\n",
+        "            s_hat_minus: Dict[str, Tuple[float, float]]) -> float:\n",
+        "        \"\"\"\n",
+        "        Conditional raw supply curve Q̄_i(p_i; s_{-i}):\n",
+        "\n",
+        "        Given your bid price p_i and the profile of opponents' bids s_{-i},\n",
+        "        this returns the maximum quantity available to you after fully\n",
+        "        serving all opponents whose bids exceed p_i.\n",
+        "\n",
         "            Q̄_i(p_i; s_{-i}) = max { Q_max - ∑_{j: p_j >= p_i} q_j, 0 }\n",
         "\n",
         "        where each opponent j requests quantity q_j at price p_j.\n",
@@ -291,7 +315,7 @@
         "            a_i(s) = q_i ∧ Q_i(p_i, ŝ_{-i})\n",
         "        \"\"\"\n",
         "        q_i, p_i = s_i\n",
-        "        return min(q_i, self.Q_i(p_i, s_hat_minus))\n",
+        "        return min(q_i, self.Q_i_bar(p_i, s_hat_minus))\n",
         "\n",
         "    def build_price_ladder(self,\n",
         "                           s_hat: Dict[str, Tuple[float,float]]\n",
@@ -416,7 +440,7 @@
       "metadata": {
         "id": "_lijIjQBukbI"
       },
-      "execution_count": 16,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -480,7 +504,7 @@
       "metadata": {
         "id": "V_YzCdl0vqRb"
       },
-      "execution_count": 17,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -525,7 +549,7 @@
       "metadata": {
         "id": "ItW-tlZdb63t"
       },
-      "execution_count": 18,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -580,9 +604,9 @@
           "height": 273
         },
         "id": "Tt9dT4JXQZwF",
-        "outputId": "605c55fe-d7ea-4b27-d7e1-5415e389cfde"
+        "outputId": "464f7a7b-23ad-4582-992f-970c81e9de57"
       },
-      "execution_count": 19,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "display_data",
@@ -612,17 +636,17 @@
               "      <td>1</td>\n",
               "      <td>4.90</td>\n",
               "      <td>0.00</td>\n",
-              "      <td>4.90</td>\n",
+              "      <td>0.01</td>\n",
               "      <td>0.00</td>\n",
-              "      <td>1.50</td>\n",
+              "      <td>0.01</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>2</td>\n",
+              "      <td>4.99</td>\n",
               "      <td>0.00</td>\n",
+              "      <td>0.10</td>\n",
               "      <td>0.00</td>\n",
-              "      <td>0.00</td>\n",
-              "      <td>0.00</td>\n",
-              "      <td>0.00</td>\n",
+              "      <td>0.82</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>Winner: 1</td>\n",
@@ -704,17 +728,17 @@
               "      <td>6</td>\n",
               "      <td>19.97</td>\n",
               "      <td>0.00</td>\n",
-              "      <td>19.97</td>\n",
+              "      <td>0.01</td>\n",
               "      <td>0.00</td>\n",
-              "      <td>11.25</td>\n",
+              "      <td>0.02</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>7</td>\n",
+              "      <td>19.99</td>\n",
               "      <td>0.00</td>\n",
+              "      <td>0.03</td>\n",
               "      <td>0.00</td>\n",
-              "      <td>0.00</td>\n",
-              "      <td>0.00</td>\n",
-              "      <td>0.00</td>\n",
+              "      <td>0.50</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>Winner: 6</td>\n",
