Utility plot matches Semrets

--- a/doconv.ipynb
+++ b/doconv.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOzicXplS+NVvLMYoBzCcW4",
+      "authorship_tag": "ABX9TyN+28tCeW9nf7KHHuzJpSUQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,6 +80,12 @@
         "from mpl_toolkits.mplot3d import Axes3D\n",
         "\n",
         "# Progressive Second Price Auction translation from Julia to Python\n",
+        "\n",
+        "BUYER_SPECS: List[Tuple[str, float, float, float, float]] = [\n",
+        "    (\"A\", 3.0, 2.0, 10.0, 0.1),\n",
+        "    (\"B\", 1.5, 1.8, 12.0, 0.1),\n",
+        "    (\"C\", 2.8, 1.5, 15.0, 0.1),\n",
+        "]\n",
         "\n",
         "def mktheta(kappa: float = 0.0, barq: float = 0.0):\n",
         "    \"\"\"\n",
